[project]
name = "deepeval-test"
version = "0.1.0"
description = "Deepeval test project with JUnit report output"
requires-python = ">=3.9"
dependencies = ["deepeval"]

[tool.setuptools.package-dir]
# Editable install of the reporter library:
# pip install -e /path/to/deepeval-junit-reporter
# (or: pip install -r requirements-dev.txt)
